fix(back-to-top): use visibility instead of display

--- a/packages/back-to-top/src/style.css
+++ b/packages/back-to-top/src/style.css
@@ -11,21 +11,20 @@
   --button-radius: var(--btt-button-radius, 999px);
   --button-size: var(--btt-button-size, 1.5rem);
 
-  display: none;
   inset: var(--button-inset);
-  opacity: 1;
+  opacity: 0;
   position: fixed;
-  transform: scale(1);
-  transition: transform 200ms;
-
-  @starting-style {
-    opacity: 0;
-    transform: scale(0);
-  }
+  transform: scale(0);
+  transition:
+    transform 200ms,
+    opacity 200ms;
+  visibility: hidden;
 }
 
 :host([data-state='active']) {
-  display: block;
+  opacity: 1;
+  transform: scale(1);
+  visibility: visible;
 }
 
 button {
